--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ ul {
     list-style: none;
     padding: 0;
     width:95%;
-    margin-right: 8px; /* 添加间距，调整与右侧索引条的距离 */
+    margin-right: 5px; /* 添加间距，调整与右侧索引条的距离 */
 }
 
 li {
@@ -56,7 +56,7 @@ li:hover {
     flex-direction: column;
     align-items: center;
     position: sticky;
-    top: 20%; /* 调整索引条与页面顶部的距离 */
+    top: 30%; /* 调整索引条与页面顶部的距离 */
     right: 0; /* 调整索引条与页面右边的距离 */
     width: 20px;
     height: calc(100% - 160px); /* 调整索引条高度以适应布局 */
@@ -66,8 +66,10 @@ li:hover {
 
 .index-item {
     cursor: pointer;
-    margin: 2px;
-    padding: 2px 8px;
+    margin: 0;
+    padding: 0;
+    font-size: 4px;
+    color:dodgerblue;
 }
 
 .search-bar {
